Fix vertical alignment of likebtn and Disqus button

--- a/_sass/minima/base.scss
+++ b/_sass/minima/base.scss
@@ -56,7 +56,7 @@ img {
   background-image: url(https://c.disquscdn.com/next/embed/assets/img/sprite.b4130d9ff4208cc87ff6d649fd1dc064.png);
   background-position: 0 -38px;
   background-size: 86px 142.5px;
-  margin-top: -19px;
+  margin-top: -23px;
 }
 
 
